src/testData/analysis/floatLiterals/floatRadixes_1_7.cr
# LANGUAGE_LEVEL: 1.7

<error descr="Binary float literals are not supported">0b1011_f32</error>
<error descr="Binary float literals are not supported">0b1011_f64</error>

<error descr="Octal float literals are not supported">0o1234_f32</error>
<error descr="Octal float literals are not supported">0o1234_f64</error>

1234_f32
1234_f64

0x1AD8_f32
0x1AD8_f64